added code to practice adding to the DOM

--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,9 @@
    <title>title</title>
  </head>
  <body>
-
+   <ul id='example'> Cookies sold per hour.
+     <li id=>Some Text</li>
+   </ul>
  </body>
    <script src="app.js" type="text/javascript"></script>
 </html>
