--- a/sales.html
+++ b/sales.html
@@ -5,8 +5,8 @@
    <title>title</title>
  </head>
  <body>
-   <ul id='example'> Cookies sold per hour.
-     <li id=>Some Text</li>
+   <ul id='pike'> 1st and Pike.
+
    </ul>
  </body>
    <script src="app.js" type="text/javascript"></script>
