added a total function to appear after sales for each store

--- a/sales.html
+++ b/sales.html
@@ -5,8 +5,15 @@
    <title>title</title>
  </head>
  <body>
-   <ul id='pike'> 1st and Pike.
-
+   <ul id ='pike'> 1st and Pike.
+   </ul>
+   <ul id = 'seatac'> SeaTac Airport
+   </ul>
+   <ul id = 'seacent'> Seattle Center
+   </ul>
+   <ul id = 'cap'> Capitol Hill
+   </ul>
+   <ul id = 'alki'> Alki
    </ul>
  </body>
    <script src="app.js" type="text/javascript"></script>
