added content to indx.html page including a title, picture of a salmon, the locations, hours, and mission statement. Added a style.css page to hold styling for site as well as a custom google font

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
  <head>
    <meta charset="UTF-8">
    <title>title</title>
+   <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+   <link href='style.css' type='text/css' rel='stylesheet' />
  </head>
  <body>
-  
+   <h1>Salmon Cookies</h1>
+   <img src = 'https://raw.githubusercontent.com/codefellows/seattle-201d25/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png'>
+   <div>
+     <h2>Come visit us at these locations!</h2>
+     <ul>
+       <li>1st and Pike</li>
+       <li>Seatac Airport</li>
+       <li>Seattle Center</li>
+       <li>Capitol Hill</li>
+       <li>Alki Beach</li>
+     </ul>
+
+     <p>Store Hours - 6:00 am to 8:00 pm</p>
+     <ul>Contact us!
+       <li>e-mail - pat@salmoncookie.com</li>
+       <li>phone - 206-555-5555</li>
+     </ul>
+
+     <h3>What is Salmon Cookies?</h3>
+     <p>
+       Salmon Cookies are the hottest new trend sweeping the Seattle area. Not only are our delicious Salmon Cookies shaped like the classic northwest fish, they're actually made for salmon too. While this may seem crazy to you, Salmon Cookies are actually quite tasty. We start with the freshest Salmon that we could find laying outside the local market and grind it down into a fine powder. Then that powder is added to our fantastic store bought cookie dough and baked for 5 minutes, just enough to give it that rare fish flavor that we all love. Salmon cookies are available in the folowing tasty flavors.
+       <ul>
+         <li> Coho Chocolate Chip</li>
+         <li> Sockeye Sugar Cookie</li>
+         <li> Chinook Oatmeal Rasin</li>
+       </ul>
+       Please stop by and see what that fishy smell is ... its cookies!
+     </p>
+
+   </div>
  </body>
    <script src="app.js" type="text/javascript"></script>
 </html>
