updated css to have a background color as well as different fonts and font colors depending on what the content is

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    <link href='style.css' type='text/css' rel='stylesheet' />
  </head>
  <body>
-   <h1>Salmon Cookies</h1>
+   <h1 class = 'highlight'>Salmon Cookies</h1>
    <img src = 'https://raw.githubusercontent.com/codefellows/seattle-201d25/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png'>
-   <div>
+   <div class = 'first'>
      <h2>Come visit us at these locations!</h2>
      <ul>
        <li>1st and Pike</li>
@@ -18,12 +18,14 @@
        <li>Capitol Hill</li>
        <li>Alki Beach</li>
      </ul>
-
-     <p>Store Hours - 6:00 am to 8:00 pm</p>
-     <ul>Contact us!
-       <li>e-mail - pat@salmoncookie.com</li>
-       <li>phone - 206-555-5555</li>
-     </ul>
+    </div>
+    <div class = 'list'>
+       <p class = 'data' class = 'second'>Store Hours - 6:00 am to 8:00 pm</p>
+       <ul class = 'data' class = 'second'>Contact us!
+         <li class = 'data' class = 'second'>e-mail - pat@salmoncookie.com</li>
+         <li class = 'data' class = 'second'>phone - 206-555-5555</li>
+       </ul>
+     </div>
 
      <h3>What is Salmon Cookies?</h3>
      <p>
@@ -35,8 +37,6 @@
        </ul>
        Please stop by and see what that fishy smell is ... its cookies!
      </p>
-
-   </div>
  </body>
    <script src="app.js" type="text/javascript"></script>
 </html>
