--- a/sales.html
+++ b/sales.html
@@ -5,16 +5,9 @@
    <title>title</title>
  </head>
  <body>
-   <ul id ='pike'> 1st and Pike.
-   </ul>
-   <ul id = 'seatac'> SeaTac Airport
-   </ul>
-   <ul id = 'seacent'> Seattle Center
-   </ul>
-   <ul id = 'cap'> Capitol Hill
-   </ul>
-   <ul id = 'alki'> Alki
-   </ul>
+   <h1>Pat's Salmon Cookies</h1>
+   <section id="sales">
+   </section>
  </body>
    <script src="app.js" type="text/javascript"></script>
 </html>
