modified sales page to mirror the readme, edited title and h1

--- a/sales.html
+++ b/sales.html
@@ -3,10 +3,10 @@
  <head>
    <meta charset="UTF-8">
    <link href='style.css' type='text/css' rel='stylesheet' />
-   <title>title</title>
+   <title>Salmon Cookie Sales</title>
  </head>
  <body>
-   <h1>Pat's Salmon Cookies</h1>
+   <h1>Cookies Needed By Location Each Day</h1>
   <section id="sales">
   </section>
  </body>
