--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,10 @@
    <h1>Cookies Needed By Location Each Day</h1>
   <section id="sales">
   </section>
+  <form>
+    <label for = "name"> Name of sales object </label>
+    <input type="text" name="name"/>
+  </form>
  </body>
    <script src="app.js" type="text/javascript"></script>
 </html>
