--- a/sales.html
+++ b/sales.html
@@ -9,10 +9,35 @@
    <h1>Cookies Needed By Location Each Day</h1>
   <section id="sales">
   </section>
-  <form>
-    <label for = "name"> Name of sales object </label>
-    <input type="text" name="name"/>
-  </form>
+    <h2>Add other stores here!</h2>
+
+    <form id='theForm'>
+      <table>
+        <tr>
+          <td><label for = "name"> Name of sales object </label></td>
+          <td><input type="text" name="name"/></td>
+        </tr>
+        <tr>
+          <td><label for = "address"> Location of new strore </label></td>
+          <td><input type="text" name="address"/></td>
+        </tr>
+        <tr>
+          <td><label for = "minCook"> Minimum amount of cookies sold </label></td>
+          <td><input type="text" name="minCook"/></td>
+        </tr>
+        <tr>
+          <td><label for = "maxCook"> Maximum amount of cookies sold </label></td>
+          <td><input type="text" name="maxCook"/></td>
+        </tr>
+        <tr>
+          <td><label for = "avgCook"> Average amount of cookies sold </label></td>
+          <td><input type="text" name="avgCook"/></td>
+        </tr>
+        <tr>
+          <td><input type="submit" value="Add New Store" id="submit"></td>
+        </tr>
+      </table>
+    </form>
  </body>
    <script src="app.js" type="text/javascript"></script>
 </html>
