first crack at getting the forms working, not working yet

--- a/sales.html
+++ b/sales.html
@@ -14,20 +14,16 @@
     <form id='theForm'>
       <table>
         <tr>
-          <td><label for = "name"> Name of sales object </label></td>
-          <td><input type="text" name="name"/></td>
-        </tr>
-        <tr>
           <td><label for = "address"> Location of new strore </label></td>
           <td><input type="text" name="address"/></td>
         </tr>
         <tr>
-          <td><label for = "minCook"> Minimum amount of cookies sold </label></td>
-          <td><input type="text" name="minCook"/></td>
+          <td><label for = "minCust"> Minimum amount of customers per hour </label></td>
+          <td><input type="text" name="minCust"/></td>
         </tr>
         <tr>
-          <td><label for = "maxCook"> Maximum amount of cookies sold </label></td>
-          <td><input type="text" name="maxCook"/></td>
+          <td><label for = "maxCust"> Maximum amount of customers per hour </label></td>
+          <td><input type="text" name="maxCust"/></td>
         </tr>
         <tr>
           <td><label for = "avgCook"> Average amount of cookies sold </label></td>
