changed several of the forms to be type number instead of text, average cookies even has a step of 0.1 to allow for decimals

--- a/sales.html
+++ b/sales.html
@@ -19,15 +19,15 @@
         </tr>
         <tr>
           <td><label for = "minCust"> Minimum amount of customers per hour </label></td>
-          <td><input type="text" name="minCust"/></td>
+          <td><input type="number" name="minCust"/></td>
         </tr>
         <tr>
           <td><label for = "maxCust"> Maximum amount of customers per hour </label></td>
-          <td><input type="text" name="maxCust"/></td>
+          <td><input type="number" name="maxCust"/></td>
         </tr>
         <tr>
           <td><label for = "avgCook"> Average amount of cookies sold </label></td>
-          <td><input type="text" name="avgCook"/></td>
+          <td><input type="number" name="avgCook" step="0.1"/></td>
         </tr>
         <tr>
           <td><input type="submit" value="Add New Store" id="submit"></td>
