started edditing css and page layout, page title and first picture have been done so far

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
  <head>
    <meta charset="UTF-8">
-   <title>title</title>
+   <title>Salmon Cookies</title>
    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
    <link href='style.css' type='text/css' rel='stylesheet' />
  </head>
  <body>
-   <h1 class = 'highlight'>Salmon Cookies</h1>
-   <img src = 'https://raw.githubusercontent.com/codefellows/seattle-201d25/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png'>
+   <h1 class = 'highlight'>Pat's Salmon Cookies</h1>
+   <img src = 'assets/chinook.jpg'>
    <div class = 'first'>
      <h2>Come visit us at these locations!</h2>
      <ul>
