finished work on the top box

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
    <link href='style.css' type='text/css' rel='stylesheet' />
  </head>
  <body>
-   <h1 class = 'highlight'>Pat's Salmon Cookies</h1>
-   <img src = 'assets/chinook.jpg'>
+   <div class = 'top'>
+     <h1 class = 'highlight'>Pat's Salmon Cookies</h1>
+     <img src = 'assets/chinook.jpg' class = 'pic1'>
+   </div>
    <div class = 'first'>
      <h2>Come visit us at these locations!</h2>
      <ul>
