finished with second section containing store locations and salmon cookie picture

--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
    <link href='style.css' type='text/css' rel='stylesheet' />
  </head>
  <body>
-   <div class = 'top'>
+   <div class = 'top' 'label'>
      <h1 class = 'highlight'>Pat's Salmon Cookies</h1>
      <img src = 'assets/chinook.jpg' class = 'pic1'>
    </div>
-   <div class = 'first'>
-     <h2>Come visit us at these locations!</h2>
-     <ul>
-       <li>1st and Pike</li>
-       <li>Seatac Airport</li>
-       <li>Seattle Center</li>
-       <li>Capitol Hill</li>
-       <li>Alki Beach</li>
+   <section class = 'sec2'>
+     <h2 class = 'label'>Come visit us at the following locations!</h2>
+     <div class = locations>
+       <ul>
+         <li>1st and Pike</li>
+         <li>Seatac Airport</li>
+         <li>Seattle Center</li>
+         <li>Capitol Hill</li>
+         <li>Alki Beach</li>
      </ul>
-    </div>
+     </div>
+     <img src = 'assets/frosted-cookie.jpg' class = 'pic2'>
+    </section>
     <div class = 'list'>
        <p class = 'data' class = 'second'>Store Hours - 6:00 am to 8:00 pm</p>
        <ul class = 'data' class = 'second'>Contact us!
