--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
  <body>
    <div class = 'top' 'label'>
      <h1 class = 'highlight'>Pat's Salmon Cookies</h1>
-     <img src = 'assets/chinook.jpg' class = 'pic1'>
+     <img src = 'assets/salmon.png' class = 'pic1'>
    </div>
    <section class = 'sec2'>
      <h2 class = 'label'>Come visit us at the following locations!</h2>
-     <div class = locations>
+     <div class = 'locations'>
        <ul>
          <li>1st and Pike</li>
          <li>Seatac Airport</li>
@@ -24,24 +24,47 @@
      </div>
      <img src = 'assets/frosted-cookie.jpg' class = 'pic2'>
     </section>
-    <div class = 'list'>
-       <p class = 'data' class = 'second'>Store Hours - 6:00 am to 8:00 pm</p>
-       <ul class = 'data' class = 'second'>Contact us!
-         <li class = 'data' class = 'second'>e-mail - pat@salmoncookie.com</li>
-         <li class = 'data' class = 'second'>phone - 206-555-5555</li>
-       </ul>
+    <section class = 'sec3'>
+      <div class = 'locations'>
+        <h2>Store Hours</h2>
+        <p>Open 6:00 am to 8:00 pm, 7 days a week, closed on holidays.</p>
+        <h2 class = 'data' class = 'second'>Contact us!</h2>
+          <p class = 'data' class = 'second'>e-mail - pat@salmoncookie.com</p>
+          <p class = 'data' class = 'second'>phone - 206-555-5555</p>
+      </div>
+      <img src = 'assets/chinook.jpg' class = 'pic3'>
+    </section>
+    <section class = 'sec4'>
+      <div class = 'locations'>
+        <h2>Flavors</h2>
+        <ul>Salmon Cookies are available in these four delicious flavors
+          <li>Chocholate Chip</li>
+          <li>Oatmeal Rasin</li>
+          <li>Sugar Cookie</li>
+          <li>Peanut Butter</li>
+        </ul>
+      </div>
+      <div class = 'locations'>
+        <h2>Merchandise</h2>
+        <ul>In addition to cookies we also sell the following products
+          <li>T-Shirts</li>
+          <li>Hats</li>
+          <li>Cookie cutters</li>
+          <li>Salmon balloons</li>
+        </ul>
+      </div>
+    </section>
+    <img src = 'assets/cutter.jpeg'>
+    <img src = 'assets/shirt.jpg'>
+    <section>
+     <h2>About Us</h2>
+     <div>
+       <p>
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+       </p>
      </div>
-
-     <h3>What is Salmon Cookies?</h3>
-     <p>
-       Salmon Cookies are the hottest new trend sweeping the Seattle area. Not only are our delicious Salmon Cookies shaped like the classic northwest fish, they're actually made for salmon too. While this may seem crazy to you, Salmon Cookies are actually quite tasty. We start with the freshest Salmon that we could find laying outside the local market and grind it down into a fine powder. Then that powder is added to our fantastic store bought cookie dough and baked for 5 minutes, just enough to give it that rare fish flavor that we all love. Salmon cookies are available in the folowing tasty flavors.
-       <ul>
-         <li> Coho Chocolate Chip</li>
-         <li> Sockeye Sugar Cookie</li>
-         <li> Chinook Oatmeal Rasin</li>
-       </ul>
-       Please stop by and see what that fishy smell is ... its cookies!
-     </p>
+     <img src = 'assets/family.jpg'
+   </section>
  </body>
    <script src="app.js" type="text/javascript"></script>
 </html>
