finishing touches to style of page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
      <h2 class = 'label'>Come visit us at the following locations!</h2>
      <div class = 'locations'>
        <ul>
-         <li>1st and Pike</li>
-         <li>Seatac Airport</li>
-         <li>Seattle Center</li>
-         <li>Capitol Hill</li>
-         <li>Alki Beach</li>
+         <li class = 'data'>1st and Pike</li>
+         <li class = 'data'>Seatac Airport</li>
+         <li class = 'data'>Seattle Center</li>
+         <li class = 'data'>Capitol Hill</li>
+         <li class = 'data'>Alki Beach</li>
      </ul>
      </div>
      <img src = 'assets/frosted-cookie.jpg' class = 'pic2'>
@@ -27,8 +27,8 @@
     <section class = 'sec3'>
       <div class = 'locations'>
         <h2>Store Hours</h2>
-        <p>Open 6:00 am to 8:00 pm, 7 days a week, closed on holidays.</p>
-        <h2 class = 'data' class = 'second'>Contact us!</h2>
+        <p class = 'data' >Open 6:00 am to 8:00 pm, 7 days a week, closed on holidays.</p>
+        <h2 class = 'second'>Contact us!</h2>
           <p class = 'data' class = 'second'>e-mail - pat@salmoncookie.com</p>
           <p class = 'data' class = 'second'>phone - 206-555-5555</p>
       </div>
