--- a/sales.html
+++ b/sales.html
@@ -5,14 +5,13 @@
    <link href='style.css' type='text/css' rel='stylesheet' />
    <title>Salmon Cookie Sales</title>
  </head>
- <body>
    <h1>Cookies Needed By Location Each Day</h1>
   <section id="sales">
   </section>
     <h2>Add other stores here!</h2>
 
     <form id='theForm'>
-      <table>
+      <table class = 'data'>
         <tr>
           <td><label for = "address"> Location of new strore </label></td>
           <td><input type="text" name="address"/></td>
